core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/interpolated-include.tessla

include "${2 + 5}"
in x: Events[Int]
out x